--- a/metadata.yaml
+++ b/metadata.yaml
@@ -19,6 +19,8 @@ language: da
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: 'Anno 7603
 
   Skuespil i 6 Acter'
